--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,12 +1,38 @@
-<h1>Categories</h1>
-
-<div id="categories">
-  <% @categories.each do |category| %>
-    <%= render category %>
-    <p>
-      <%= link_to "Show this category", category %>
-    </p>
-  <% end %>
+<%# this can be removed later %>
+<div id="categories" class="container">
+  <div class="d-flex justify-content-center my-2"> 
+    <h3>Categories</h4>
+  </div>
+  <table class="table table-striped table-bordered">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Description</th>
+        <th>Is Public</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @categories.each do |category| %>
+        <tr>
+          <td><%= category.name %></td>
+          <td><%= category.description %></td>
+          <td class="align-middle">
+            <% if category.is_public %>
+              <input type="checkbox" disabled checked class="form-check-input">
+            <% else %>
+              <input type="checkbox" disabled class="form-check-input">
+            <% end %>
+          </td>
+          <td class="d-flex gap-2">
+            <%= link_to "Show this category", category, class:'btn btn-primary' %>
+            <%= link_to "Edit", edit_category_path(category), class:'btn btn-primary' %>
+            <%= button_to "Delete", category, method: :delete, data: { turbo_confirm: 'Are you sure?' }, class:'btn btn-danger' %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
 
 <%= link_to "New category", new_category_path %>
