--- a/app/views/study_categories/index.html.erb
+++ b/app/views/study_categories/index.html.erb
@@ -1,75 +1,48 @@
 <div class="d-flex justify-content-between align-items-top mt-4">
   <div class="dropdown">
     <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-      Variable below
+      <%= "#{request.query_parameters[:filter] || 'Filter'}" %>
     </button>
     <ul class="dropdown-menu">
-      <%= button_to "Not Archived", {action: "index", filter: "Not Archived"}, method: :get, class:'dropdown-item' %>
+      <li><%= link_to "Not Archived", request.query_parameters.merge(action: "index", filter: "Not Archived"), method: :get, class:'dropdown-item' %></li>
       <li><hr class="dropdown-divider"></li>
-      <%= button_to "Archived", {action: "index", filter: "archived"}, method: :get, class:'dropdown-item' %>
+      <li><%= link_to "Archived", request.query_parameters.merge(action: "index", filter: "Archived"), method: :get, class:'dropdown-item' %></li>
       <li><hr class="dropdown-divider"></li>
-      <%= button_to "All", {action: "index", filter: "all"}, method: :get, class:'dropdown-item' %>
+      <li><%= link_to "All", request.query_parameters.merge(action: "index", filter: "All"), method: :get, class:'dropdown-item' %></li>
     </ul>
   </div>
   <%= form_with url:"/", method: :get do |form| %>
     <div class="field form-group d-flex align-items">
-      <%= form.text_field :q, class:'form-control me-1', placeholder:'Search' %>
+      <%= form.text_field :q, class:'form-control me-1', placeholder:'Search', value: request.query_parameters[:q] %>
+      <% if request.query_parameters[:filter] %>
+        <%= hidden_field_tag :filter, request.query_parameters[:filter] %>
+      <% end %>
       <%= form.submit "Search", class:'btn btn-primary' %>
     </div>
   <% end %>
   <%= link_to "Create Category", new_category_path, class:'btn btn-primary mb-4' %>
 </div>
-<div class="text-center">
+<div class="text-start">
   <div class="row gx-6">
+    <% @study_categories.each do |study_category| %>
     <div class="col-12 col-md-6 col-lg-4 mb-5">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title">title</h5>
-          <h6 class="card-subtitle">how many cards</h6>
-          <p class="card-text">description</p>
-            actions
+          <h5 class="card-title mb-2"><%= study_category.name %></h5>
+          <p class="card-subtitle mb-4"><strong><%= study_category.card_count %></strong><% if study_category.card_count <= 1 %> card <% else %> cards <% end %></p>
+          <p class="card-text mb-4"><%= study_category.description %></p>
+          <div class="d-flex gap-2">
+            <%= link_to "Study", study_category_path(study_category), class:'btn btn-primary' %>
+            <% if study_category.is_owner %>
+              <%= link_to "Edit", edit_category_path(study_category.category_id), class:'btn btn-primary' %>
+            <% end %>
+            <%= button_to "Archive", archive_study_category_path(study_category), method: :patch, data: { turbo_confirm: "Are you sure?" }, class:'btn btn-secondary' %>
+            <%= button_to "Delete", destroy_study_category_path(study_category), method: :delete, data: { turbo_confirm: "Are you sure?" }, class:'btn btn-danger' %>
+          </div>
         </div>
       </div>
     </div>
-    <div class="col-12 col-md-6 col-lg-4 mb-5">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">title</h5>
-          <h6 class="card-subtitle">how many cards</h6>
-          <p class="card-text">description</p>
-            actions
-        </div>
-      </div>
-    </div>
-    <div class="col-12 col-md-6 col-lg-4 mb-5">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">title</h5>
-          <h6 class="card-subtitle">how many cards</h6>
-          <p class="card-text">description</p>
-            actions
-        </div>
-      </div>
-    </div>
-    <div class="col-12 col-md-6 col-lg-4 mb-5">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">title</h5>
-          <h6 class="card-subtitle">how many cards</h6>
-          <p class="card-text">description</p>
-            actions
-        </div>
-      </div>
-    </div>
-    <div class="col-12 col-md-6 col-lg-4 mb-5">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">title</h5>
-          <h6 class="card-subtitle">how many cards</h6>
-          <p class="card-text">description</p>
-            actions
-        </div>
-      </div>
-    </div>
+    <% end %>
+    <%# Display categories that users don't subscribe to or don't own %>
   </div>
 </div>
